--- a/.htaccess
+++ b/.htaccess
@@ -1,52 +1,11 @@
 RewriteEngine On
-Options -Indexes
-#IndexIgnore */*
 
-#Menghilangkan Extension PHP
-<IfModule mod_rewrite.c>
-RewriteEngine on
+# Menghilangkan ekstensi .php dari URL
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*)$ $1.php
-</IfModule>
+RewriteRule ^(.*)$ $1.php [L]
 
-#Menghilangkan Extension HTML
-<IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*)$ $1.html
-</IfModule>
-
-#Kompres File Download
-<ifmodule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/css text/html text/plain application/javascript text/xml application/xml application/xhtml+xml application/rss+xml application/x-javascript
-</ifmodule>
-
-#Link HTTPS
-    # Redirect HTTPS
-    RewriteEngine On
-    RewriteCond %{HTTPS} off
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-#RewriteCond %{HTTPS} !on
-#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
-
-#Menghalangi Akses File/Folder Tersembunyi
-RewriteCond %{SCRIPT_FILENAME} -d [OR]
-RewriteCond %{SCRIPT_FILENAME} -f
-RewriteRule "(^|/)\." - [F]
-
-Header set X-XSS-Protection "1; mode=block"
-
-#Blokir IP Tertentu
-#order allow,denydeny from 255.0.0.0deny from 192.168.1.allow from all
-
-#=======================================
-
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php72” package as the default “PHP” programming language.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php72 .php .php7 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
+# Redirect dari .php ke URL tanpa ekstensi (opsional)
+RewriteCond %{THE_REQUEST} /([^?\s]*?)\.php[\s?] [NC]
+RewriteRule ^ /%1? [R=301,L]
